# cusan

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: cucorrConfig.cmake.in  cucorrToolchain.cmake  cusanConfig.cmake.in  cusanToolchain.cmake
cmake/modules/: cucorr-format.cmake  cucorr-llvm.cmake  cucorr-target-util.cmake  cusan-format.cmake  cusan-llvm.cmake  cusan-target-util.cmake
lib/: CMakeLists.txt
lib/analysis/: CMakeLists.txt  KernelAnalysis.cpp  KernelAnalysis.h  KernelMemory.cpp  KernelMemory.h  KernelModel.cpp  KernelModel.h  ModelIO.cpp
lib/pass/: AnalysisTransform.cpp  AnalysisTransform.h  CMakeLists.txt  CommandLine.h  CucorrPass.cpp  CucorrPass.h  CusanPass.cpp  CusanPass.h  FunctionDecl.h
lib/runtime/: CMakeLists.txt  CucorrRuntime.cpp  CucorrRuntime.h  CucorrRuntime_cudaSpecific.cpp  CusanRuntime.cpp  CusanRuntime.h  CusanRuntime_cudaSpecific.cpp  MPIInterception.cpp  StatsCounter.h  TSan_External.h  TsanEvents.inc
lib/support/: CudaUtil.h  Logger.h  Table.h  Util.h
scripts/: CMakeLists.txt  cucorr-tmpl.sh.in  cucorr-wrapper.in  cusan-tmpl.sh.in  cusan-wrapper.in
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/pass/: 01_test.c  02_event.c  03_cuda_to_mpi.c  04_mpi_to_cuda.c  05_cuda_to_mpi_stream.c  06_cuda_to_mpi_event.c  07_cuda_to_mpi_read.c  08_cudamemcpy_to_mpi.c  08_struct_of_buff  08_struct_of_buff.c  09_cudamemcpy_default.c  10_cudahostalloc.c  11_cuda_functor  11_cuda_functor.cpp  11_cuda_to_mpi_struct_of_buff.c  11_struct_of_buff.c  12_struct_ptr.c  12_struct_recursion.c  13_struct_recursion.c  14_cuda_functor.c  15_cuda_memcpy_sync.c  15_cuda_memset_sync.c  15_cuda_memset_sync_nonblocking.c  16_cuda_hostalloc_implicit_sync.c  16_cuda_malloc_implicit_sync.c  17_cuda_stream_query_busy_loop.c  18_cuda_event_query_busy_loop.c  18_cuda_event_with_flags_query_busy_loop.c  18_cuda_to_mpi_event_query_busy_loop.c  18_partial_buff_write.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync_nonblocking.c  19_cuda_to_mpi_send_cudaMemcpyAsyncH2H_implicit_sync.c  20_cuda_default_stream_sync.c  20_cuda_to_mpi_send_ds_sync_w_r.c  21_chunked_streams_example.c  22_cuda_to_mpi_partial_buff_write.c  23_cuda_default_stream_post_sync.c  23_cuda_default_stream_post_sync_nonblocking.c  24_cuda_sync_stream_default.c  (+6 more)
test/pass/kernel_read_write/: 01_ptr_write.c  02_val_readwrite_ptr_read_ptr_write.c  03_struct_write.c  04_struct_ptr.c  05_struct_inside_of_struct.c  06_cuda_labmda.c
test/pass/pass/: 01_test.c  02_event.c  03_cuda_to_mpi.c  04_mpi_to_cuda.c  05_cuda_to_mpi_stream.c  06_cuda_to_mpi_event.c  07_cuda_to_mpi_read.c  08_cudamemcpy_to_mpi.c  09_cudamemcpy_default.c  10_cudahostalloc.c  11_cuda_to_mpi_struct_of_buff.c  11_struct_of_buff.c  12_struct_ptr.c  13_struct_recursion.c  14_cuda_functor.c  15_cuda_memset_sync.c  15_cuda_memset_sync_nonblocking.c  17_cuda_stream_query_busy_loop.c  18_cuda_event_query_busy_loop.c  18_cuda_event_with_flags_query_busy_loop.c  18_cuda_to_mpi_event_query_busy_loop.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync_nonblocking.c  19_cuda_to_mpi_send_cudaMemcpyAsyncH2H_implicit_sync.c  20_cuda_default_stream_sync.c  20_cuda_to_mpi_send_ds_sync_w_r.c  21_chunked_streams_example.c  22_cuda_to_mpi_partial_buff_write.c  23_cuda_default_stream_post_sync.c  23_cuda_default_stream_post_sync_nonblocking.c  24_cuda_sync_stream_default_nonblocking.c  25_cuda_default_stream_double_sync.c  26_malloc_pitch.c  28_cuda_memset2d_implicit_syn.c  29_tsan_cuda_to_mpi.c  30_tsan_annotate_cuda_to_mpi.c  31_tsan_cuda_event.c  32_tsan_async_copy.c  33_tsan_wait_event.c  suppressions.txt
test/runtime/: 02_event.c  03_cuda_to_mpi.c  04_mpi_to_cuda.c  05_cuda_to_mpi_stream.c  06_cuda_to_mpi_event.c  07_cuda_to_mpi_read.c  08_cudamemcpy_to_mpi.c  09_cudamemcpy_default.c  10_cudahostalloc.c  11_cuda_to_mpi_struct_of_buff.c  11_struct_of_buff.c  12_struct_ptr.c  13_struct_recursion.c  14_cuda_functor.c  15_cuda_memset_sync.c  15_cuda_memset_sync_nonblocking.c  16_cuda_hostalloc_implicit_sync.c  17_cuda_stream_query_busy_loop.c  18_cuda_event_query_busy_loop.c  18_cuda_event_with_flags_query_busy_loop.c  18_cuda_to_mpi_event_query_busy_loop.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync_nonblocking.c  19_cuda_to_mpi_send_cudaMemcpyAsyncH2H_implicit_sync.c  20_cuda_default_stream_sync.c  20_cuda_to_mpi_send_ds_sync_w_r.c  21_chunked_streams_example.c  22_cuda_to_mpi_partial_buff_write.c  23_cuda_default_stream_post_sync.c  23_cuda_default_stream_post_sync_nonblocking.c  24_cuda_sync_stream_default_nonblocking.c  25_cuda_default_stream_double_sync.c  26_malloc_pitch.c  27_cuda_memcpy2d_implicit_syn.c  28_cuda_memset2d_implicit_syn.c  29_tsan_cuda_to_mpi.c  30_tsan_annotate_cuda_to_mpi.c  31_tsan_cuda_event.c  32_tsan_async_copy.c  33_tsan_wait_event.c
test/support/: gpu_mpi.h
test/tsan/: 01_tsan_cuda_to_mpi.c  02_tsan_annotate_cuda_to_mpi.c  03_tsan_cuda_event.c  04_tsan_async_copy.c  05_tsan_wait_event.c  TSan_External.h  suppressions.txt
